--- a/assets/layouts/jackdaw_main_layout.xml
+++ b/assets/layouts/jackdaw_main_layout.xml
@@ -129,12 +129,21 @@
                         </Layout>
                     </children>
                 </Layout>
+		<Layout name="tempo_tracks_area" type="NORMAL">
+		  <x>REL 0</x>
+		  <y>STACK 0</y>
+		  <w>SCALE 1.000000</w>
+		  <h>REL 0</h>
+		  <index>1</index>
+		  <children>
+		  </children>
+		</Layout>
                 <Layout name="tracks_area" type="NORMAL">
                     <x>REL 0</x>
-                    <y>REL 28</y>
+                    <y>STACK 0</y>
                     <w>SCALE 1.000000</w>
                     <h>REL 0</h>
-                    <index>1</index>
+                    <index>2</index>
                     <children>
                     </children>
                 </Layout>
@@ -143,7 +152,7 @@
                     <y>REL 0</y>
                     <w>REL 161</w>
                     <h>REL 28</h>
-                    <index>2</index>
+                    <index>3</index>
                     <children>
                     </children>
                 </Layout>
@@ -152,7 +161,7 @@
                     <y>REL 28</y>
                     <w>COMPLEMENT 1056964608</w>
                     <h>COMPLEMENT 1056964608</h>
-                    <index>3</index>
+                    <index>4</index>
                     <children>
                     </children>
                 </Layout>
@@ -161,7 +170,7 @@
                     <y>REL 0</y>
                     <w>REL 161</w>
                     <h>SCALE 1.000000</h>
-                    <index>4</index>
+                    <index>5</index>
                     <children>
                     </children>
                 </Layout>
