--- a/assets/layouts/tempo_track_template.xml
+++ b/assets/layouts/tempo_track_template.xml
@@ -21,9 +21,9 @@
                     <children>
                         <Layout name="display" type="NORMAL">
                             <x>REL 0</x>
-                            <y>REL 6</y>
+                            <y>REL 0</y>
                             <w>REL 120</w>
-                            <h>REL 1</h>
+                            <h>SCALE 1.000000</h>
                             <index>0</index>
                             <children>
                             </children>
@@ -45,6 +45,24 @@
                     <w>REL 8</w>
                     <h>SCALE 1.000000</h>
                     <index>1</index>
+                    <children>
+                    </children>
+                </Layout>
+            </children>
+        </Layout>
+        <Layout name="right_console" type="NORMAL">
+            <x>REVREL 0</x>
+            <y>REL 0</y>
+            <w>REL 150</w>
+            <h>SCALE 1.000000</h>
+            <index>1</index>
+            <children>
+                <Layout name="right_colorbar" type="NORMAL">
+                    <x>REL 0</x>
+                    <y>REL 0</y>
+                    <w>REL 8</w>
+                    <h>SCALE 1.000000</h>
+                    <index>0</index>
                     <children>
                     </children>
                 </Layout>
