layout program updates; draw subdiv textentries horizontally; reset tempo track settings on change in num beats

--- a/assets/layouts/tempo_track_settings.xml
+++ b/assets/layouts/tempo_track_settings.xml
@@ -3,96 +3,84 @@
     <y>REL 0</y>
     <w>SCALE 1.000000</w>
     <h>SCALE 1.000000</h>
-    <index>0</index>
     <children>
         <Layout name="padded" type="NORMAL">
             <x>REL 60</x>
             <y>REL 22</y>
             <w>PAD 0</w>
             <h>PAD 0</h>
-            <index>0</index>
             <children>
                 <Layout name="info" type="NORMAL">
                     <x>REL 0</x>
                     <y>REL 0</y>
-                    <w>REL 556</w>
+                    <w>SCALE 1.000000</w>
                     <h>REL 46</h>
-                    <index>0</index>
                     <children>
                     </children>
                 </Layout>
                 <Layout name="segment_selector" type="NORMAL">
                     <x>REL 0</x>
                     <y>REL 46</y>
-                    <w>REL 556</w>
+                    <w>SCALE 1.000000</w>
                     <h>REL 50</h>
-                    <index>1</index>
                     <children>
                     </children>
                 </Layout>
                 <Layout name="segment_info" type="NORMAL">
                     <x>REL 0</x>
-                    <y>REL 96</y>
-                    <w>REL 556</w>
-                    <h>REL 200</h>
-                    <index>2</index>
+                    <y>STACK 0</y>
+                    <w>SCALE 1.000000</w>
+                    <h>REVREL 278</h>
                     <children>
                         <Layout name="time_signature_area" type="NORMAL">
                             <x>REL 0</x>
                             <y>REL 0</y>
-                            <w>REL 267</w>
-                            <h>REL 200</h>
-                            <index>0</index>
+                            <w>SCALE 1.000000</w>
+                            <h>REL 138</h>
                             <children>
-                                <Layout name="beat_subdivs_area" type="NORMAL">
-                                    <x>REL 23</x>
-                                    <y>REL 38</y>
-                                    <w>REL 244</w>
-                                    <h>REL 162</h>
-                                    <index>0</index>
-                                    <children>
-                                        <Layout name="subdiv_values_col" type="NORMAL">
-                                            <x>REL 0</x>
-                                            <y>REL 0</y>
-                                            <w>REL 186</w>
-                                            <h>SCALE 1.000000</h>
-                                            <index>0</index>
-                                            <children>
-                                            </children>
-                                        </Layout>
-                                        <Layout name="beat_subdivs_area_child2" type="NORMAL">
-                                            <x>STACK 0</x>
-                                            <y>REL 0</y>
-                                            <w>COMPLEMENT 1</w>
-                                            <h>SCALE 1.000000</h>
-                                            <index>1</index>
-                                            <children>
-                                            </children>
-                                        </Layout>
-                                    </children>
-                                </Layout>
                                 <Layout name="num_beats" type="NORMAL">
                                     <x>REL 0</x>
                                     <y>REL 0</y>
                                     <w>REL 267</w>
                                     <h>REL 38</h>
-                                    <index>1</index>
                                     <children>
                                         <Layout name="num_beats_label" type="NORMAL">
                                             <x>REL 0</x>
                                             <y>REL 0</y>
                                             <w>REL 100</w>
                                             <h>REL 38</h>
-                                            <index>0</index>
                                             <children>
                                             </children>
                                         </Layout>
                                         <Layout name="num_beats_value" type="NORMAL">
                                             <x>STACK 0</x>
                                             <y>REL 0</y>
-                                            <w>REL 30</w>
+                                            <w>REL 40</w>
                                             <h>REL 38</h>
-                                            <index>1</index>
+                                            <children>
+                                            </children>
+                                        </Layout>
+                                    </children>
+                                </Layout>
+                                <Layout name="beat_subdivs" type="NORMAL">
+                                    <x>REL 0</x>
+                                    <y>STACK 0</y>
+                                    <w>SCALE 1.000000</w>
+                                    <h>REL 38</h>
+                                    <children>
+                                        <Layout name="beat_subdiv_label" type="NORMAL">
+                                            <x>REL 0</x>
+                                            <y>REL 0</y>
+                                            <w>REL 100</w>
+                                            <h>REL 38</h>
+                                            <children>
+                                            </children>
+                                        </Layout>
+                                        <Layout name="beat_subdiv_values" type="NORMAL">
+                                            <x>STACK 0</x>
+                                            <y>REL 0</y>
+                                            <w>COMPLEMENT 1</w>
+                                            <h>REL 38</h>
                                             <children>
                                             </children>
                                         </Layout>
