--- a/assets/layouts/tempo_track_settings.xml
+++ b/assets/layouts/tempo_track_settings.xml
@@ -36,7 +36,7 @@
                             <x>REL 0</x>
                             <y>REL 0</y>
                             <w>SCALE 1.000000</w>
-                            <h>REL 90</h>
+                            <h>REL 174</h>
                             <children>
                                 <Layout name="num_beats" type="NORMAL">
                                     <x>REL 0</x>
@@ -84,6 +84,14 @@
                                             <children>
                                             </children>
                                         </Layout>
+                                    </children>
+                                </Layout>
+                                <Layout name="ebb_radio" type="NORMAL">
+                                    <x>REL 0</x>
+                                    <y>STACK 0</y>
+                                    <w>SCALE 1.000000</w>
+                                    <h>REL 98</h>
+                                    <children>
                                     </children>
                                 </Layout>
                             </children>
