--- a/assets/layouts/tempo_track_settings.xml
+++ b/assets/layouts/tempo_track_settings.xml
@@ -36,7 +36,7 @@
                             <x>REL 0</x>
                             <y>REL 0</y>
                             <w>SCALE 1.000000</w>
-                            <h>REL 174</h>
+                            <h>REL 217</h>
                             <children>
                                 <Layout name="num_beats" type="NORMAL">
                                     <x>REL 0</x>
@@ -86,19 +86,28 @@
                                         </Layout>
                                     </children>
                                 </Layout>
-                                <Layout name="ebb_radio" type="NORMAL">
-                                    <x>REL 0</x>
-                                    <y>STACK 0</y>
-                                    <w>SCALE 1.000000</w>
-                                    <h>REL 98</h>
-                                    <children>
-                                    </children>
+
+                                <Layout name="time_sig_canvas" type="NORMAL">
+                                  <x>REL 0</x>
+                                  <y>STACK 10</y>
+                                  <w>SCALE 0.750000</w>
+                                  <h>REL 74</h>
+                                  <children>
+                                  </children>
+                                </Layout>
+				<Layout name="ebb_radio" type="NORMAL">
+                                  <x>REL 0</x>
+                                  <y>STACK 20</y>
+                                  <w>SCALE 1.000000</w>
+                                  <h>REL 1</h>
+                                  <children>
+                                  </children>
                                 </Layout>
                             </children>
                         </Layout>
                         <Layout name="time_signature_submit" type="NORMAL">
                             <x>REL 0</x>
-                            <y>STACK 0</y>
+                            <y>STACK 20</y>
                             <w>REL 106</w>
                             <h>REL 31</h>
                             <children>
