--- a/assets/layouts/tempo_track_settings.xml
+++ b/assets/layouts/tempo_track_settings.xml
@@ -36,7 +36,7 @@
                             <x>REL 0</x>
                             <y>REL 0</y>
                             <w>SCALE 1.000000</w>
-                            <h>REL 217</h>
+                            <h>REL 289</h>
                             <children>
                                 <Layout name="num_beats" type="NORMAL">
                                     <x>REL 0</x>
@@ -78,7 +78,7 @@
                                         </Layout>
                                         <Layout name="beat_subdiv_values" type="NORMAL">
                                             <x>STACK 0</x>
-                                            <y>REL 6</y>
+                                            <y>REL 7</y>
                                             <w>COMPLEMENT 1</w>
                                             <h>PAD 0</h>
                                             <children>
@@ -86,22 +86,45 @@
                                         </Layout>
                                     </children>
                                 </Layout>
-
                                 <Layout name="time_sig_canvas" type="NORMAL">
-                                  <x>REL 0</x>
-                                  <y>STACK 10</y>
-                                  <w>SCALE 0.750000</w>
-                                  <h>REL 74</h>
-                                  <children>
-                                  </children>
+                                    <x>REL 0</x>
+                                    <y>STACK 10</y>
+                                    <w>SCALE 0.750000</w>
+                                    <h>REL 74</h>
+                                    <children>
+                                    </children>
                                 </Layout>
-				<Layout name="ebb_radio" type="NORMAL">
-                                  <x>REL 0</x>
-                                  <y>STACK 20</y>
-                                  <w>SCALE 1.000000</w>
-                                  <h>REL 1</h>
-                                  <children>
-                                  </children>
+				<Layout name="tempo" type="NORMAL">
+                                    <x>REL 0</x>
+                                    <y>STACK 20</y>
+                                    <w>SCALE 1.000000</w>
+                                    <h>REL 38</h>
+                                    <children>
+                                        <Layout name="tempo_label" type="NORMAL">
+                                            <x>REL 0</x>
+                                            <y>REL 0</y>
+                                            <w>REL 100</w>
+                                            <h>REL 38</h>
+                                            <children>
+                                            </children>
+                                        </Layout>
+                                        <Layout name="tempo_value" type="NORMAL">
+                                            <x>REL 140</x>
+                                            <y>REL 0</y>
+                                            <w>REL 127</w>
+                                            <h>REL 38</h>
+                                            <children>
+                                            </children>
+                                        </Layout>
+                                    </children>
+                                </Layout>
+                                <Layout name="ebb_radio" type="NORMAL">
+                                    <x>REL 0</x>
+                                    <y>STACK 20</y>
+                                    <w>SCALE 1.000000</w>
+                                    <h>REL 1</h>
+                                    <children>
+                                    </children>
                                 </Layout>
                             </children>
                         </Layout>
